# secure-debug-manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
arm_ds/: manifest.xml  sdm_manifest.xsd
arm_ds/DB/Boards/Arm/MPS3_Corstone-1000_ADAC/: MPS3_Corstone-1000_ADAC.sdf  a35_rams.py  dtsl_config_script.py  project_types.xml
arm_ds/DB/Boards/Arm/MPS3_Corstone-1000_ADAC/SDM/: manifest.xml
depends/: mbedtls-2.28_msvc_fix.patch
docs/: Doxyfile  gendoc_single.sh  mainpage.md
docs/html/: annotated.html  auth__token__provider_8h.html  auth__token__provider_8h__incl.map  auth__token__provider_8h__incl.md5  auth__token__provider_8h_source.html  classes.html  csapbcom_8h.html  csapbcom_8h__incl.map  csapbcom_8h__incl.md5  csapbcom_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  ext__com__port__def_8h.html  ext__com__port__def_8h__dep__incl.md5  ext__com__port__def_8h__incl.md5  ext__com__port__def_8h_source.html  ext__com__port__driver_8h.html  ext__com__port__driver_8h__dep__incl.md5  ext__com__port__driver_8h__incl.map  ext__com__port__driver_8h__incl.md5  ext__com__port__driver_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  graph_legend.md5  index.html  mainpage_8md_source.html  menudata.js  secure__debug__manager_8h.html  secure__debug__manager_8h__dep__incl.map  secure__debug__manager_8h__dep__incl.md5  secure__debug__manager_8h__incl.map  secure__debug__manager_8h__incl.md5  secure__debug__manager_8h_source.html  structCSAPBCOMConnectionDescription.html  (+15 more)
example/: CMakeLists.txt  main.c  main.cpp
example/data/: an535_sdc600.sdf
example/data/chains/: README.md  chain.EcdsaP256-3
example/data/keys/: EcdsaP256Key-3.pem
example/data/sdf/: MPS3_Corstone-1000.sdf
include/: auth_token_provider.h  cha_log.h  cha_types.h  csapbcom.h  ext_com_port_driver.h  sdc600_log.h  secure_debug_manager.h  secure_debug_protocol.h  secure_debug_types.h
libs/auth_token_provider/: CMakeLists.txt  auth_token_provider.cpp
libs/csapbcom/: CMakeLists.txt
libs/csapbcom/src/: csapbcom_interface.cpp
libs/csapbcom/src/rddiwrapper/: irddi_wrapper.h  rddi_wrapper_impl.h  rddi_wrapper_impl_default.cpp  rddi_wrapper_impl_stubbed.cpp
libs/csapbcom/tests/: csapbcom_interface_test.cpp
libs/ext_com_port/: CMakeLists.txt  ext_com_port_driver.cpp
libs/secure_debug_manager/: CMakeLists.txt  secure_debug_manager.cpp  secure_debug_protocol.cpp
sdm/: CMakeLists.txt  ext_com_port_driver.cpp  ext_com_port_driver.h  psa_adac_crypto_api.c  sdm_config.h  secure_debug_manager.cpp  secure_debug_manager_impl.cpp  secure_debug_manager_impl.h
tests/: CMakeLists.txt  ext_com_port_driver_test.cpp
