CMAKE_MINIMUM_REQUIRED (VERSION 3.1.0)
PROJECT (ext_com_port)

ADD_LIBRARY (ext_com_port SHARED
    ${CMAKE_CURRENT_SOURCE_DIR}/ext_com_port_driver.cpp
)

ADD_DEFINITIONS (-DEXT_COM_PORT_EXPORT_SYMBOLS)

INCLUDE_DIRECTORIES (
    ${DEPENDS_INC_PATH})

TARGET_LINK_LIBRARIES (ext_com_port csapbcom)
IF (WIN32)
    INSTALL (TARGETS ext_com_port RUNTIME DESTINATION output)
    INSTALL (TARGETS ext_com_port RUNTIME DESTINATION arm_ds)
ELSE ()
    INSTALL (TARGETS ext_com_port LIBRARY DESTINATION output)
    INSTALL (TARGETS ext_com_port LIBRARY DESTINATION arm_ds)
ENDIF ()
